@@ -2,9 +2,11 @@ package com.g15.library_system.facade.impl;
 
 import com.g15.library_system.dto.EmailNotificationNewBooksDTO;
 import com.g15.library_system.dto.request.ExportExcelRequest;
+import com.g15.library_system.dto.request.ImportExcelRequest;
 import com.g15.library_system.dto.response.BookResponse;
 import com.g15.library_system.dto.response.NotifyBookResponse;
 import com.g15.library_system.entity.Book;
+import com.g15.library_system.enums.UpdateMethod;
 import com.g15.library_system.facade.BookFacade;
 import com.g15.library_system.mapper.BookMapper;
 import com.g15.library_system.service.BookService;
@@ -15,6 +17,7 @@ import com.g15.library_system.util.DateUtil;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -33,7 +36,7 @@ public class BookFacadeImpl implements BookFacade {
   @Override
   public List<String> searchTitleContains(String title) {
     return bookService.findAll().stream()
-        .filter(book -> book.titleContains(title))
+        .filter(book -> book.titleContains(title) && book.isAvailable())
         .map(Book::getTitle)
         .toList();
   }
@@ -70,11 +73,6 @@ public class BookFacadeImpl implements BookFacade {
   }
 
   @Override
-  public Object[][] toBookDataWithQuantity(Map<Book, Integer> books) {
-    return this.bookMapper.toBookDataWithQuantity(books);
-  }
-
-  @Override
   public void exportExcel(List<Book> books, String nameFile, String headerFile) {
     excelService.exportExcelBook(books, nameFile, headerFile);
   }
@@ -87,9 +85,9 @@ public class BookFacadeImpl implements BookFacade {
   @Override
   public List<NotifyBookResponse> getAllNewBook() {
     return this.bookService.findAll().stream()
-        .filter(book -> DateUtil.isNowDay(book.getCreatedAt()))
+        .filter(book -> DateUtil.isNowDay(book.getCreatedAt()) && book.isNewBook())
         .map(book -> this.bookMapper.toNotifyBookResponse(book))
-        .toList();
+        .collect(Collectors.toList());
   }
 
   @Override
@@ -101,5 +99,26 @@ public class BookFacadeImpl implements BookFacade {
   public void sendEmailNotificationNewBook(
       EmailNotificationNewBooksDTO emailNotificationNewBooksDTO) {
     this.emailProducerService.send(emailNotificationNewBooksDTO);
+  }
+
+  @Override
+  public void importExcel(ImportExcelRequest importExcelRequest) {
+    this.excelProducerService.importExcel(importExcelRequest);
+  }
+
+  @Override
+  public void markAnnouncedBook() {
+    for (var book : this.bookService.findAll()) {
+      book.markOldBook();
+    }
+  }
+
+  @Override
+  public void updateBookQuantity(Map<Book, Integer> bookWithQuantity) {
+    bookWithQuantity.forEach(
+        (book, integer) -> {
+          book.updateQuantity(integer, UpdateMethod.SUBTRACT);
+          this.bookService.update(book);
+        });
   }
 }
